Moving application layout to separate file

--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -10,16 +10,7 @@
     <th></th>
   </tr>
 
-<% @applications.each do |application| %>
-  <tr>
-    <td><%= application.title %></td>
-    <td><%= application.description %></td>
-    <td><%= application.version %></td>
-    <td><%= link_to 'Show', application %></td>
-    <td><%= link_to 'Edit', edit_application_path(application) %></td>
-    <td><%= link_to 'Destroy', application, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<%= render :partial => "application", :collection => @applications %>
 </table>
 
 <br />
