Rails3 style in code...

--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -10,7 +10,7 @@
     <th></th>
   </tr>
 
-<%= render :partial => "application", :collection => @applications %>
+<%= render @applications %>
 </table>
 
 <br />
