Show comments per application

--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -17,4 +17,9 @@
 <% @comment = Comment.new %>
 <%= render :partial => 'comments/form' %>
 
+<h3>Comments for this application</h3>
+
+<%= "No comments yet!" if @application.comments %>
+<%= render @application.comments %>
+
 </div>
