Hide ID field, should only be set via mobile devices

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,10 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :id %><br />
-    <%= f.text_field :id %>
-  </div>
+  <%= f.hidden_field :id %>
+
   <div class="field">
     <%= f.label :comment %><br />
     <%= f.text_area :comment %>
