--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <%= f.hidden_field :id %>
+  <%= f.hidden_field( :application_id , { :value => @application.id } ) %>
 
   <div class="field">
     <%= f.label :comment %><br />
