--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,15 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Id:</b>
-  <%= @comment.id %>
-</p>
-
-<p>
-  <b>Comment:</b>
-  <%= @comment.comment %>
-</p>
-
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= render @comment %>
