--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@application) do |f| %>
+<%= form_for(@application, :html => {:multipart => true} ) do |f| %>
   <% if @application.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@application.errors.count, "error") %> prohibited this application from being saved:</h2>
@@ -19,13 +19,14 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
 
-    <span id='application_description_length'><%= @application.description.length %></span>
+    <span id='application_description_length'><%= @application.description.length if @application.description %></span>
 
   </div>
   <div class="field">
     <%= f.label :version %><br />
     <%= f.text_field :version %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
