--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -1,7 +1,9 @@
 <div id='application-<%= application.id %>' class='application'>
     <h2><%= application.title %></h2>
+    <%= image_tag application.appimage_url %>
     <p><%= application.description %></p>
     <%= link_to 'Show', application %>
     <%= link_to 'Edit', edit_application_path(application) %>
     <%= link_to 'Destroy', application, confirm: 'Are you sure?', method: :delete %>
+    <%= link_to 'Download', application.appexecutable_url %>
 </div>
