fix: from global view-variable into local variable

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<p>
+<p class='comment' id='comment-id-<%= comment.id %>'>
   <b>Comment:</b>
-  <%= debug @comment %>
+  <%= comment.comment %>
 </p>
