--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -18,7 +18,8 @@
 <% @comment = Comment.new %>
 <%= render :partial => 'comments/form' %>
 
-<%= "No comments yet!" if @application.comments.empty? %>
+<%= "No comments yet!" if @application.has_comments? %>
+
 <%= render @application.comments %>
 
 </div>
