Added a field for confirm password

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,9 @@
   </div>
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password %><br/>
+    <%= f.label  "Confirm password" %><br />
+    <%= f.password_field :password_confirm %>
   </div>
   <div class="field">
     <%= f.label :firstname %><br />
