--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag( login_path, :method => "post") do %>
+<%= form_tag( login_users_path, :method => "post") do %>
 
   <div class="field">
     <%= label :username, "Käyttäjätunnus" %><br />
