Add gray line below comments

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -6,3 +6,7 @@ body.comments {
   // Add the comments class to your body tag
   // Then, place scoped styles here.
 }
+
+.comment {
+   border-bottom: 1px solid gray;
+}
