--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) if @current_user == @user %> |
+<%= link_to 'Edit', edit_user_path(@user) if @current_user == @user %>
 <%= link_to 'Back', users_path %>
