--- a/app/views/data_entries/_form.html.erb
+++ b/app/views/data_entries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@data_entry) do |f| %>
+<%= form_tag( new_application_data_entry_path, :method => "get" ) do  %>
   <% if @data_entry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@data_entry.errors.count, "error") %> prohibited this data_entry from being saved:</h2>
@@ -12,18 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :id %><br />
-    <%= f.text_field :id %>
+    <%= text_field_tag :uid %>
   </div>
   <div class="field">
-    <%= f.label :time %><br />
-    <%= f.text_field :time %>
-  </div>
-  <div class="field">
-    <%= f.label :key %><br />
-    <%= f.text_field :key %>
+    <%= text_field_tag :key %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= submit_tag 'Done' %>
   </div>
 <% end %>
