--- a/app/views/data_entries/_form.html.erb
+++ b/app/views/data_entries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag( new_application_data_entry_path, :method => "get" ) do  %>
+<%= form_tag( application_data_entries_path, :method => "post" ) do  %>
   <% if @data_entry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@data_entry.errors.count, "error") %> prohibited this data_entry from being saved:</h2>
