--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@application, :html => {:multipart => true} ) do |f| %>
+<%= form_for(@application, :url => user_applications_path, :html => {:multipart => true} ) do |f| %>
   <% if @application.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@application.errors.count, "error") %> prohibited this application from being saved:</h2>
