--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
 <p class='comment' id='comment-id-<%= comment.id %>'>
   <%= comment.comment %> <br/>
-  <%= comment.updated_at.strftime("%Y-%m-%d @ %H:%M") %>
+  <%= time_ago_in_words( comment.updated_at ) %> ago
 </p>
