--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -1,5 +1,6 @@
+<div id='box-login'>
 <% if @current_user %>
-Mui. <%= link_to @current_user.name() , edit_user_path( @current_user ) %> <%= link_to 'Logout' , logout_users_path %>
+Hi <%= link_to @current_user.name() , edit_user_path( @current_user ) %> <%= link_to 'Logout' , logout_users_path %>
 <% else %>
 <%= form_tag( login_users_path, :method => "post") do %>
 
@@ -18,3 +19,4 @@ Mui. <%= link_to @current_user.name() , edit_user_path( @current_user ) %> <%= l
 
 <% end %>
 <% end %>
+</div>
