--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,9 +1,22 @@
+body {
+	background: pink;
+	font-family: sans-serif;
+}
+
 #wrapper {
+	background: white;
+	border: 3px solid red;
+	padding: 10px;
+	/** fancy css3 attribute **/
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
 	width: 80%;
-	margin: 50px auto;
+	margin: 100px auto;
 }
 
 #box-login {
 	float: right;
+	margin-top: -100px;
 	margin-right: 20px;
 }
