Add toolbar to all views when user is logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 <%= render :partial => 'users/login' %>
 
 <div id='wrapper'>
+
+<%= render :partial => 'users/toolbar' if @current_user %>
+
 <%= yield %>
 </div>
 
